fix(cli): input tag don't slide with soft keyboard on iOS

--- a/cli/src/app/components/chats/chat/chat.component.scss
+++ b/cli/src/app/components/chats/chat/chat.component.scss
@@ -28,7 +28,7 @@
     }
     
     #footer-chat {
-        position: fixed;
+        position: absolute;
         z-index: 9999;
         transform: translate3d(0, 0, 0);
         background-color: #fff;
